# octavia-dashboard

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  babel-django.cfg  bindep.txt  build-constraints.txt  lower-constraints.txt  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  reference.rst
octavia_dashboard/: __init__.py  karma.conf.js  post_install.sh  sdk_connection.py  version.py
octavia_dashboard/enabled/: _1480_project_loadbalancersv2_panel.py  _1481_project_ng_loadbalancersv2_panel.py  _1482_project_load_balancer_panel.py
octavia_dashboard/local_settings.d/: _1499_load_balancer_settings.py
octavia_dashboard/tests/: settings.py  test_octavia_dashboard.py  urls.py
releasenotes/notes/: Add-ProxyV2-b5537c092737fe41.yaml  Fix-namespace-collision-with-barbican-ui-267f4ba074729ea6.yaml  add-RBAC-43ee180e712294ed.yaml  add-allowed-cidrs-ad205b1524da3d2c.yaml  add-az-support-efdd4e7c5dccef21.yaml  add-ciphers-options-for-listeners-and-pools-8440eaf5a551c44c.yaml  add-draining-operating-status-48f59a204371ff0d.yaml  add-insert-headers-a6fd80c837a89536.yaml  add-l7-support-05a790bc2965c38f.yaml  add-member-backup-32e2ec2553c1ba24.yaml  add-provider-for-loadbalancers-422e7cbd868d68af.yaml  add-sctp-support-a1ea956b7630f47d.yaml  add-timeout-options-8988fc477fa46d31.yaml  add-tls_enabled-support-for-pools-449e39f851535839.yaml  add-udp-support-acb1a22fb605d3a8.yaml  add-x-forwarded-proto-e30b52a3f853ed62.yaml  allows-creation-of-single-resources-9ec5fe87acc7c93c.yaml  auto-refresh-detail-pages-26166d5d9c26edee.yaml  bp-horizon-lbaas-v2-ui-ba7e4c97a0460f85.yaml  cascade-delete-e4c9d80a31076540.yaml  display-api-error-details-34f0b887020c48be.yaml  drop-py-2-7-f3372b5c26171513.yaml  edit-default-pool-on-listener-206d8dfeea135360.yaml  filter-select-65160dcbe699a96d.yaml  fix-auth-issue-5226777261765699.yaml  fix-certificate-list-listener-edit-1d9775d23692c34b.yaml  fix-chrome-member-dialog-154981a7794d5fb4.yaml  fix-flavor-no-flavor-profile-c3e82325f16d5ab8.yaml  fix-incorrect-region-endpoint-1afc5ebdc6fc4110.yaml  fix-member-weight-value-range-9310678f967c771a.yaml  (+9 more)
zuul.d/: jobs.yaml  projects.yaml
(+239 files in other folders)
