[metadata]
name = octavia-dashboard
summary = Horizon panels for Octavia
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/octavia-dashboard/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    octavia_dashboard

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
autodoc_tree_index_modules = False
autodoc_tree_excludes =
    setup.py
    octavia_dashboard/tests
    octavia_dashboard/enabled
    octavia_dashboard/locale
    octavia_dashboard/static
    octavia_dashboard/conf
    octavia_dashboard/local_settings.d
    octavia_dashboard/post_install.sh
    octavia_dashboard/karma.conf.js
autodoc_index_modules = False
autodoc_exclude_modules =
    octavia_dashboard.tests.*
    octavia_dashboard.enabled.*
api_doc_dir = contributor/modules
